--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
