--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "moment": "^2.30.1",
     "react": "^17.0.1",
+    "react-calendar": "^4.8.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-icons": "^5.1.0",
@@ -22,7 +23,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "concurrently \"cd backend && nodemon server.js\" \"react-scripts start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
