--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.13"
+    "mongoose": "^5.10.13",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
