--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auto-increment-group": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.10.13",
+    "mongoose": "^8.3.2",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
